# hydrogen

./: .clang-format  .gitignore  .gitmodules  BytecodeBuilder.py  CMakeLists.txt  Diff_Mapping.cpp  Diff_Mapping.hpp  Diff_Util.cpp  Diff_Util.hpp  Get_Input.cpp  Get_Input.hpp  Graph.cpp  Graph.hpp  Graph_Edge.cpp  Graph_Edge.hpp  Graph_Edge_Iterator.cpp  Graph_Edge_Iterator.hpp  Graph_Function.cpp  Graph_Function.hpp  Graph_Instruction.hpp  Graph_Line.cpp  Graph_Line.hpp  Hydrogen.cpp  Hydrogen.doxygen  LICENSE  MVICFG.cpp  MVICFG.hpp  Module.cpp  Module.hpp  README.md  REPORT.md  Result.txt  SystemBuilder.py
.github/workflows/: static.yml
Docs/: README.txt
Docs/HTML/: annotated.html  annotated_dup.js  classes.html  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_type.html  functions_v.html  functions_vars.html  functions_w.html  functions_x.html  functions_y.html  functions_~.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_1.map  (+14 more)
Docs/HTML/search/: all_0.js  all_1.js  all_10.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+28 more)
TestPrograms/: include_gardener_build.md
TestPrograms/Basic/: Result_0_1.txt  Result_1_2.txt  Result_2_3.txt  Result_all.txt
TestPrograms/Basic/Buggy2/: Prog.c
TestPrograms/Buggy/: Prog.c
TestPrograms/Correct/: Prog.c
TestPrograms/Mine/: Result_0_1.txt  Result_1_2.txt
TestPrograms/Mine/Ladybug1/: main.c
TestPrograms/Mine/Ladybug2/: main.c
TestPrograms/Mine/Ladybug3/: main.c
TestPrograms/OSS/: Result_0_1.txt  Result_1_2.txt  fiche-build.md
TestPrograms/include_gardener/: include_gardener_build.md
hydrogit/: arguments.py  compilation.py  git_stuff.py  hydrogen.py  hydrogit.py  todo.md
results/basic/: Result_0_1.txt  Result_1_2.txt  Result_2_3.txt
results/fiche/: Result_0_1.txt  Result_1_2.txt  Result_2_3.txt  Result_all.txt
results/ladybug/: Result_0_1.txt  Result_1_2.txt  Result_2_3.txt  Result_all.txt
(+258 files in other folders)
